--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "storagebinjs",
-	"version": "0.0.2",
+	"version": "1.0.0",
 	"description": "A tiny localStorage library",
 	"main": "./dist/bin.min.js",
 	"author": {
@@ -12,23 +12,19 @@
 		"type": "git",
 		"url": "http://github.com/cferdinandi/bin"
 	},
+	"scripts": {
+		"clean": "recursive-delete 'dist'",
+		"js": "rollup --config",
+		"build-dirty": "npm-run-all -p js",
+		"build": "npm-run-all -s clean build-dirty",
+		"watch-js": "chokidar './src/**/*.js' -c 'npm run js'",
+		"watch": "npm-run-all -p build watch-js"
+	},
 	"devDependencies": {
-		"gulp": "4.0.0",
-		"del": "3.0.0",
-		"lazypipe": "1.0.1",
-		"gulp-flatmap": "1.0.2",
-		"gulp-header": "2.0.5",
-		"gulp-rename": "1.4.0",
-		"jshint": "2.9.6",
-		"gulp-jshint": "2.1.0",
-		"jshint-stylish": "2.2.1",
-		"gulp-concat": "2.6.1",
-		"gulp-terser": "1.1.7",
-		"gulp-optimize-js": "1.1.0",
-		"gulp-sass": "4.0.2",
-		"gulp-cssnano": "2.1.3",
-		"gulp-autoprefixer": "6.0.0",
-		"gulp-svgmin": "2.1.0",
-		"browser-sync": "2.26.3"
+		"npm-run-all": "^4.1.5",
+		"recursive-fs": "^2.1.0",
+		"rollup": "^2.6.1",
+		"rollup-plugin-terser": "^7.0.2",
+		"chokidar-cli": "^2.1.0"
 	}
 }
